--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "gulp-jade": "^1.1.0",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4"
+  },
+  "devDependencies": {
+    "smart-grid": "^2.0.1"
   }
 }
